Fix overflow for article and footer

--- a/style.css
+++ b/style.css
@@ -69,11 +69,13 @@ body {
 	display: flex;
 	justify-content: space-between;
 	gap: 150px;
+	flex-wrap: wrap;
 }
 
 .content-hook-text {
 	display: flex;
 	flex-direction: column;
+	flex-basis: 540px;
 }
 
 .content-hook-text-main {
@@ -95,8 +97,13 @@ body {
 	width: 130px;
 }
 
+.content-hook-img-container {
+	flex-wrap: wrap;
+	flex: 1 2 130px;
+}
+
 .content-hook-img {
-	height: 350px;
+	width: 100%;
 }
 
 /*2nd content*/
@@ -224,7 +231,7 @@ p.text {
 	color: white;
 
 	width: 100%;
-	padding: 30px;
+	padding: 30px 0px;
 
 	display: flex;
 	justify-content: center;
